--- a/package2/package.json
+++ b/package2/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc --build",
+    "build": "npm run clean && npm run compile",
+    "compile": "tsc --build",
     "dev": "tsc --build --watch",
-    "clean": "rm -rf build",
+    "clean": "rm -rf build tsconfig.tsbuildinfo",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,6 +17,6 @@
     "typescript": "4.9.5"
   },
   "dependencies": {
-    "package1": "file:../package1"
+    "package1": "workspace:*"
   }
 }
